# MacOSRetraining

./: .gitignore  CMakeLists.txt  Product.proto  README.md  Version.proto  main.cpp
conan/: conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  graph_info.json
